--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML Images</title>
-  </head>
-  <body>
-    <!-- Your code here -->
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>HTML Images</title>
+</head>
+
+<body>
+  <img
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="lion"
+  title="THE KING OF THE JUNGLE"
+  />
+  <img
+  src="/home/prince/portfolio-website/africamap.png"
+  alt="AFRICA MAP"
+  title="AFRICA"
+  />
+  <img 
+  src="/home/prince/portfolio-website/coin.gif" 
+  alt="bitcoin"
+  title="CRYPTO CURRENCY"
+  />
+</body>
+
 </html>
